# Discord-Bot-Gus

./: .gitignore  Cargo.toml  Dockerfile  README.md  Secrets.toml
src/: lib.rs  main.rs
src/commands/: ping.rs
src/commands/economy/: start.rs
src/commands/economy/admin/: add.rs  remove.rs  set.rs
src/commands/moderation/: ban.rs  kick.rs  mute.rs  removewarn.rs  search.rs  unban.rs  unmute.rs  warn.rs
src/constants/: config.rs  economy.rs  infractions.rs  permissions.rs  time.rs
src/events/: event_handler.rs
src/utils/: args.rs  economy.rs  erorrs.rs  errors.rs  infractions.rs  mongo.rs  serenity.rs  time.rs
