[package]
name = "gus_bot"
version = "0.1.4"
edition = "2021"
description = "Bot for discord.gg/walterwhite guild"
repository = "https://github.com/Szczurox/Discord-Bot-Gus/"
license-file = "LICENSE"

[lib]

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.17"
serde = "1.0.145"

[dependencies.tokio]
version = "1.21.1"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["cache", "framework", "standard_framework", "rustls_backend", "model", "utils"]

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["async-std-runtime"]

[dependencies.shuttle-service]
version = "0.5.2"
features = ["bot-serenity", "sqlx-postgres", "secrets"]

[dependencies.sqlx]
version = "0.6.2"
features = ["runtime-tokio-native-tls", "postgres"]